--- a/httpd.conf
+++ b/httpd.conf
@@ -1,22 +1,22 @@
-Alias /media/ /var/www/ann/data/www/navaz/navaz/media/
-        <Directory /var/www/ann/data/www/navaz/navaz/media>
+Alias /media/ /var/www/ann/data/www/navaz.ru/navaz/media/
+        <Directory /var/www/ann/data/www/navaz.ru/navaz/media>
                   Order allow,deny
                   Options -Indexes
                   Allow from all
                   IndexOptions FancyIndexing
         </Directory>
 
-        Alias /static/ /var/www/ann/data/www/navaz/navaz/static/
-        <Directory /var/www/ann/data/www/navaz/navaz/static>
+        Alias /static/ /var/www/ann/data/www/navaz.ru/navaz/static/
+        <Directory /var/www/ann/data/www/navaz.ru/navaz/static>
                   Order allow,deny
                   Options -Indexes
                   Allow from all
                   IndexOptions FancyIndexing
         </Directory>
 
-        <Directory /var/www/ann/data/www/navaz/navaz/public>
+        <Directory /var/www/ann/data/www/navaz.ru/navaz/public>
                   Allow from all
         </Directory>
 
-        WSGIScriptAlias / /var/www/ann/data/www/navaz/navaz/run.wsgi
+        WSGIScriptAlias / /var/www/ann/data/www/navaz.ru/navaz/run.wsgi
  
