setting + ya metrica

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen        80;
 
-    server_name   navaz.ru www.navaz.ru navaz.annkpx.ru;
+    server_name   navaz.annkpx.ru navaz.ru www.navaz.ru;
 
     access_log    /var/www/ann/data/navaz/logs/nginx_access.log;
     error_log     /var/www/ann/data/navaz/logs/nginx_error.log;
@@ -21,5 +21,3 @@ server {
         expires 30d;
     }
 }
-
-#sudo ln /var/www/ann/data/navaz/nginx.conf /etc/nginx/sites-enabled/navaz.conf
