--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen        80;
 
-    server_name   navaz.annkpx.ru navaz.ru www.navaz.ru;
+    server_name   navaz.ru www.navaz.ru;
 
     access_log    /var/www/ann/data/navaz/logs/nginx_access.log;
     error_log     /var/www/ann/data/navaz/logs/nginx_error.log;
